[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "robotics-utils"
version = "0.1.0"
description = "HHL's Robotics Utility Functions."

packages = [
    { include = "robotics_utils", from = "src" },
    { include = "std_robot_def", from = "src" }
]

authors = ["Honglu He <heh6@rpi.edu>",]
maintainers = ["Honglu He <heh6@rpi.edu>",]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "BSD-3-Clause"
readme = "README.md"

repository = "https://github.com/hehonglu123/robotics_utils"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<2.0.0"
general_robotics_toolbox = "^0.7.2"
matplotlib = "^3.6.3"
scipy = "^1.9.2"